fix buggs on mobile

--- a/src/components/Box/box.css
+++ b/src/components/Box/box.css
@@ -47,6 +47,7 @@
           position: absolute;
           width: 100%;
           height: 500px;
+          top: -50px;
           filter: opacity(100%);
           transition:
             filter 0.2s;
